MODON MRE BPDEV/force-app/main/default/objects/AssignmentRule__c/AssignmentRule__c.object-meta.xml
<CustomObject>
    <label>Assignment Rule</label>
    <nameField>
        <displayFormat>AR{00000}</displayFormat>
        <label>Assignment Rule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>