MODON MRE BPDEV/force-app/main/default/objects/AssignmentRule__c/fields/Default_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Queue_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Queue Name</label>
    <length>115</length>
    <type>Text</type>
</CustomField>