MODON MRE BPDEV/force-app/main/default/objects/AssignmentRule__c/fields/DefaultQueueID__c.field-meta.xml
<CustomField>
    <fullName>DefaultQueueID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>