MODON MRE BPDEV/force-app/main/default/objects/AssignmentRule__c/fields/DefaultUserId__c.field-meta.xml
<CustomField>
    <fullName>DefaultUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>