MODON MRE BPDEV/force-app/main/default/objects/AssignmentRule__c/fields/ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ProcessName__c</fullName>
    <label>Process Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RecordType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Lead Assignment</fullName>
            </value>
            <value>
                <fullName>Digital Case Assignment</fullName>
            </value>
            <value>
                <fullName>Finance-Post Sales Payment Deferral</fullName>
            </value>
            <value>
                <fullName>Qualified Lead Assignment</fullName>
            </value>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>Property Transfer OffPlan</fullName>
            </value>
            <value>
                <fullName>Property Transfer Title Deed</fullName>
            </value>
            <value>
                <fullName>Joint Owner OffPlan</fullName>
            </value>
            <value>
                <fullName>Joint Owner Title Deed</fullName>
            </value>
            <value>
                <fullName>Payment Plan Swap</fullName>
            </value>
            <value>
                <fullName>Unit Upgrade</fullName>
            </value>
            <value>
                <fullName>Unit Swap</fullName>
            </value>
            <value>
                <fullName>Plot Handover</fullName>
            </value>
            <value>
                <fullName>Default SR</fullName>
            </value>
            <value>
                <fullName>Default Unit Cancellation</fullName>
            </value>
            <value>
                <fullName>Pre Unit Cancellation</fullName>
            </value>
            <value>
                <fullName>Post Unit Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>