MODON MRE BPDEV/force-app/main/default/objects/AssignmentRule__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Assignment Rules</relationshipLabel>
    <relationshipName>Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>