MODON MRE BPDEV/force-app/main/default/objects/AssignmentRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RecordType__c</columns>
    <columns>ProcessName__c</columns>
    <columns>Order__c</columns>
    <columns>DefaultQueueID__c</columns>
    <columns>ProcessType__c</columns>
    <columns>Project__c</columns>
    <columns>Default_Queue_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>